# sample-go-grpc-with-bazel

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  main.go
pkg/: BUILD.bazel  greeting.go
proto/: BUILD.bazel  hello.proto
proto/hoge/: BUILD.bazel  hoge.proto
