load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/hoge:hoge_proto"],
)

go_proto_library(
    name = "hello_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/Bo0km4n/sample-go-grpc-with-bazel/proto",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/hoge:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":hello_go_proto"],
    importpath = "github.com/Bo0km4n/sample-go-grpc-with-bazel/proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "helloworld_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/hoge:hoge_proto"],
)
