load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hoge_proto",
    srcs = ["hoge.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hoge_go_proto",
    importpath = "github.com/Bo0km4n/sample-go-grpc-with-bazel/proto/hoge",
    proto = ":hoge_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":hoge_go_proto"],
    importpath = "github.com/Bo0km4n/sample-go-grpc-with-bazel/proto/hoge",
    visibility = ["//visibility:public"],
)
